# SFDetector

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: SFDetectorConfig.cmake
docs/: README.SFDetector
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  SFDetector_SFDetect.xml
include/SFDetector/: CMakeLists.txt  SFDetect.h  api.h
lib/: CMakeLists.txt  SFDetect_impl.cc  SFDetect_impl.h  qa_SFDetect.cc  qa_SFDetect.h  qa_SFDetector.cc  qa_SFDetector.h  test_SFDetector.cc
python/: CMakeLists.txt  __init__.py  __init__.pyo  qa_SFDetect.py
swig/: CMakeLists.txt  SFDetector_swig.i
